-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.2.2, Qt Creator 4.3.0-beta1
-
None
-
Ubuntu 16.04 LTS 64 bit
-
4637b3fed7a456ec664ae9ba1de5c03b32aa12fd
- Have two kits configured in Creator.
- Create a new project and configure it to use both kits.
- Go to "Tools" -> "Options..." > "Build & Run" -> "Kits".
- Select the default kit and click "Remove".
- Select the other kit and click "Remove".
- Click "Apply".
Creator crashes:1 QtSharedPointer::ExternalRefCountData::getAndRef qsharedpointer.cpp 1335 0x7ffff62c95c1 2 QWeakPointer<QObject>::QWeakPointer<QObject> qsharedpointer_impl.h 723 0x7fffdff613f6 3 QWeakPointer<QObject>::assign<QObject> qsharedpointer_impl.h 719 0x7fffdff6076a 4 QPointer<ProjectExplorer::Target>::operator= qpointer.h 83 0x7fffdffd716b 5 Debugger::Internal::DebuggerPluginPrivate::updateUiForTarget debuggerplugin.cpp 3349 0x7fffdffc6b6c 6 QtPrivate::FunctorCall<QtPrivate::IndexesList<0>, QtPrivate::List<ProjectExplorer::Target *>, void, void (Debugger::Internal::DebuggerPluginPrivate:: *)(ProjectExplorer::Target *)>::call qobjectdefs_impl.h 141 0x7fffdffe1c43 7 QtPrivate::FunctionPointer<void (Debugger::Internal::DebuggerPluginPrivate:: *)(ProjectExplorer::Target *)>::call<QtPrivate::List<ProjectExplorer::Target *>, void> qobjectdefs_impl.h 160 0x7fffdffe0604 8 QtPrivate::QSlotObject<void (Debugger::Internal::DebuggerPluginPrivate:: *)(ProjectExplorer::Target *), QtPrivate::List<ProjectExplorer::Target *>, void>::impl qobject_impl.h 120 0x7fffdffdeafa 9 QtPrivate::QSlotObjectBase::call qobject_impl.h 101 0x7ffff649fbcb 10 QMetaCallEvent::placeMetaCall qobject.cpp 500 0x7ffff64947f9 11 QObject::event qobject.cpp 1263 0x7ffff6495a35 12 QApplicationPrivate::notify_helper qapplication.cpp 3799 0x7ffff6fba9aa 13 QApplication::notify qapplication.cpp 3159 0x7ffff6fb7bf8 14 QCoreApplication::notifyInternal2 qcoreapplication.cpp 988 0x7ffff6457067 15 QCoreApplication::sendEvent qcoreapplication.h 231 0x7ffff645b3ca 16 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1649 0x7ffff6458582 17 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1503 0x7ffff6457ed8 18 postEventSourceDispatch qeventdispatcher_glib.cpp 276 0x7ffff64dd733 19 g_main_dispatch gmain.c 3154 0x7ffff3158197 20 g_main_context_dispatch gmain.c 3769 0x7ffff3158197 ... <Mehr>
Creator should never crash.